Fix post--list title and date spacing

--- a/src/css/components/post.css
+++ b/src/css/components/post.css
@@ -10,9 +10,14 @@
     &:hover {
       background-color: var(--color-gray);
     }
+
+    h2 {
+      margin: 8px 0 4px 0;
+    }
   }
 
   &__date {
+    text-transform: uppercase;
     font-size: 14px;
     color: var(--color-gray-dark);
   }
